--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <aside class="logo">
 
 	{% assign link = '/' %}
-	{% assign prompt = 'Back to Index' %}
+	{% assign prompt = 'Back to home' %}
 
 	<a href="{{ link | prepend: site.baseurl | prepend: site.url }}">
 		<img src="{{ site.logo_url }}" class="logo-avatar">
@@ -20,9 +20,9 @@
 		{% else %}
 			<li style="font-weight:bold;"> <a> About </a> </li>
 		{% endif %}
-		{% if page.url != '/researches' %}
-			{% assign link = '/researches' %}
-			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> Researches </a> </li>
+		{% if page.url != '/research' %}
+			{% assign link = '/research' %}
+			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> Research </a> </li>
 		{% else %}
 			<li style="font-weight:bold;"> <a> Researches </a> </li>
 		{% endif %}
@@ -33,19 +33,7 @@
 			<li style="font-weight:bold;"> <a> Projects </a> </li>
 		{% endif %}
 	</ul>
-	<ul class="bottom-menu">
-		{% if page.url != '/talks' %}
-			{% assign link = '/talks' %}
-			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> Talks </a> </li>
-		{% else %}
-			<li style="font-weight:bold;"> <a> Talks </a> </li>
-		{% endif %}
-		{% if page.url != '/blog' %}
-			{% assign link = '/blog' %}
-			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> Blog </a> </li>
-		{% else %}
-			<li style="font-weight:bold;"> <a> Blog </a> </li>
-		{% endif %}
+	<ul class="bottom-menu">	
 		{% if page.url != '/contact' %}
 			{% assign link = '/contact' %}
 			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> Contact </a> </li>
