--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -213,7 +213,7 @@ code,
 pre,
 .code,
 .footnotes {
-  font-family: 'Cutive Mono', monospace;
+  font-family: 'Source Serif Pro', serif;
 }
 code {
   color: #f14e32;
