--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 			{% assign link = '/coursework' %}
 			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> Coursework </a> </li>
 		{% else %}
-			<li style="font-weight:bold;"> <a> About </a> </li>
+			<li style="font-weight:bold;"> <a> Coursework </a> </li>
 		{% endif %}
 
 		
