--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Fira+Code" rel="stylesheet">
 
 <aside class="logo">
 
@@ -6,7 +7,7 @@
 	{% assign prompt = 'Back to home' %}
 
 	<a href="{{ link | prepend: site.baseurl | prepend: site.url }}">
-		<img src="{{ site.logo_url }}" class="logo-avatar">
+		<img src="/assets/headshot.JPG" class="logo-avatar">
 	</a>
 	<span class="logo-prompt code">{{ prompt }}</span>
 </aside>
