--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-<link rel="icon" href="{{ "/assets/favicon.png" | prepend: site.baseurl | prepend: site.url }}">
-<link rel="apple-touch-icon" href="{{ "/assets/touch-icon.png" | prepend: site.baseurl | prepend: site.url }}">
+<link rel="icon" href="{{ "/assets/favicon.ico" | prepend: site.baseurl | prepend: site.url }}">
+<link rel="apple-touch-icon" href="{{ "/assets/apple-touch-icon.png" | prepend: site.baseurl | prepend: site.url }}">
 <link rel="stylesheet" href="{{ "/assets/core.css" | prepend: site.baseurl | prepend: site.url }}">
 <link rel="canonical" href="{{ page.url | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
@@ -20,10 +20,19 @@
 
 <!-- for mathjax support -->
 {% if site.mathjax %}
-    <script type="text/x-mathjax-config">
-     MathJax.Hub.Config({
-         TeX: { equationNumbers: { autoNumber: "AMS" } }
-     });
+    <script>
+     MathJax = {
+	 tex: {
+	     inlineMath: [['$', '$'], ['\\(', '\\)']],
+	     macros: {R: "\\mathbb{R}"}
+	 },
+	 svg: {
+	     fontCache: 'global'
+	 }
+     };
     </script>
-    <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" id="MathJax-script" async
+	    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+    </script>
+
 {% endif %}
