--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,8 @@
 <aside class="menu">
 
 	<ul class="top-menu">
-		{% if page.url != '/index' %}
-			{% assign link = '/index' %}
+		{% if page.url != '/' %}
+			{% assign link = '/' %}
 			<li> <a href="{{ link | prepend: site.baseurl | prepend: site.url }}"> About </a> </li>
 		{% else %}
 			<li style="font-weight:bold;"> <a> About </a> </li>
