update highlighting and notes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
-<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Fira+Code" rel="stylesheet">
+
 
 <aside class="logo">
 
