--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 	{% assign prompt = 'Back to home' %}
 
 	<a href="{{ link | prepend: site.baseurl | prepend: site.url }}">
-		<img src="/assets/headshot.JPG" class="logo-avatar">
+		<img src={{site.logo_url}} class="logo-avatar">
 	</a>
 	<span class="logo-prompt code">{{ prompt }}</span>
 </aside>
