Update website for 2022

--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -276,6 +276,7 @@
 .highlight .kt { color: #FAC29AE6 } /* Keyword.Type */
 .highlight .s { color: #FAB795E6 } /* Literal.String */
 .highlight .nc { color: #FAC29AE6 } /* Name.Class */
+.highlight .na { color: #FAC29AE6 } /* Name.Attribute */
 .highlight .x, .o, .ow { color: #d5d6da } /* Operator.Word */
 .highlight .sb { color: #FAB795E6 } /* Literal.String.Backtick */
 .highlight .sc { color: #FAB795E6 } /* Literal.String.Char */
